Let Operator use its own non default ServiceAccount

--- a/operator/templates/manager/manager.yaml
+++ b/operator/templates/manager/manager.yaml
@@ -83,3 +83,4 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       terminationGracePeriodSeconds: 10
+      serviceAccountName: securecodebox-operator
