--- a/operator/templates/rbac/auth_proxy_role_binding.yaml
+++ b/operator/templates/rbac/auth_proxy_role_binding.yaml
@@ -8,6 +8,6 @@ roleRef:
   name: proxy-role
 subjects:
 - kind: ServiceAccount
-  name: default
+  name: securecodebox-operator
   namespace: {{ .Release.Namespace }}
 
