--- a/operator/templates/rbac/leader_election_role_binding.yaml
+++ b/operator/templates/rbac/leader_election_role_binding.yaml
@@ -8,5 +8,5 @@ roleRef:
   name: leader-election-role
 subjects:
 - kind: ServiceAccount
-  name: default
+  name: securecodebox-operator
   namespace: {{ .Release.Namespace }}
