--- a/operator/templates/rbac/role_binding.yaml
+++ b/operator/templates/rbac/role_binding.yaml
@@ -8,5 +8,5 @@ roleRef:
   name: manager-role
 subjects:
 - kind: ServiceAccount
-  name: default
+  name: securecodebox-operator
   namespace: {{ .Release.Namespace }}
