--- a/scanners/sslyze/templates/sslyze-scan-type.yaml
+++ b/scanners/sslyze/templates/sslyze-scan-type.yaml
@@ -1,4 +1,4 @@
-apiVersion: 'execution.experimental.securecodebox.io/v1'
+apiVersion: "execution.experimental.securecodebox.io/v1"
 kind: ScanType
 metadata:
   name: 'sslyze'
@@ -19,5 +19,15 @@ spec:
                 - 'sslyze'
                 - '--json_out'
                 - '/home/securecodebox/sslyze-results.json'
+              securityContext:
+                privileged: false
+                runAsNonRoot: true
+                allowPrivilegeEscalation: false
+                runAsUser: 1000
+                runAsGroup: 3000
+                readOnlyRootFilesystem: true
+                capabilities:
+                  drop:
+                    - all
               resources:
                 {{- toYaml .Values.scannerJob.resources | nindent 16 }}
